--- a/requirements.txt
+++ b/requirements.txt
@@ -20,11 +20,13 @@ builtin-interfaces==2.0.2
 calibration==0.0.0
 casadi==3.6.7
 composition-interfaces==2.0.2
+contourpy==1.3.1
 control-msgs==5.3.0
 controller==0.0.0
 controller-manager==4.21.0
 controller-manager-msgs==4.21.0
 cv-bridge==4.1.0
+cycler==0.12.1
 demo-nodes-py==0.33.5
 diagnostic-msgs==5.3.5
 diagnostic-updater==4.2.1
@@ -38,12 +40,14 @@ examples-rclpy-minimal-client==0.19.4
 examples-rclpy-minimal-publisher==0.19.4
 examples-rclpy-minimal-service==0.19.4
 examples-rclpy-minimal-subscriber==0.19.4
+fonttools==4.56.0
 generate-parameter-library-py==0.3.8
 geographic-msgs==1.0.6
 geometry-msgs==5.3.5
 image-geometry==4.1.0
 interactive-markers==2.5.4
 joint-state-publisher==2.4.0
+kiwisolver==1.4.8
 laser-geometry==2.7.0
 launch==3.4.3
 launch-ros==0.26.6
@@ -54,6 +58,7 @@ launch-yaml==3.4.3
 lifecycle-msgs==2.0.2
 logging-demo==0.33.5
 map-msgs==2.4.1
+matplotlib==3.10.0
 mentorpi-description==0.0.0
 message-filters==4.11.3
 nav-2d-msgs==1.3.4
@@ -63,9 +68,13 @@ nav2-msgs==1.3.4
 nav2-simple-commander==1.0.0
 numpy==2.2.3
 osrf-pycommon==2.1.5
+packaging==24.2
 pcl-msgs==1.0.0
 pendulum-msgs==0.33.5
 peripherals==0.0.0
+pillow==11.1.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
 python-qt-binding==2.2.1
 qt-dotgraph==2.7.5
 qt-gui==2.7.5
@@ -151,6 +160,7 @@ sensor-msgs==5.3.5
 sensor-msgs-py==5.3.5
 service-msgs==2.0.2
 shape-msgs==5.3.5
+six==1.17.0
 slam-toolbox==2.8.2
 smclib==4.1.0
 sros2==0.13.2
