--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 workspace/venv
+
+#Build-Artefakte im ROS"-Workspace ignorieren
+workspace/ros2_ws/build/
+workspace/ros2_ws/install/
+workspace/ros2_ws/log/
