--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 workspace/venv
-
-#Build-Artefakte im ROS"-Workspace ignorieren
-workspace/ros2_ws/build/
-workspace/ros2_ws/install/
-workspace/ros2_ws/log/
+workspace/ros2_ws/build
+workspace/ros2_ws/install
+workspace/ros2_ws/log
