--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,8 @@ composition-interfaces==2.0.2
 contourpy==1.3.1
 #control-msgs==5.3.0
 controller==0.0.0
-controller-manager==4.21.0
-controller-manager-msgs==4.21.0
+#controller-manager==4.21.0
+#controller-manager-msgs==4.21.0
 cv-bridge==4.1.0
 cycler==0.12.1
 demo-nodes-py==0.33.5
