--- a/requirements.txt
+++ b/requirements.txt
@@ -133,28 +133,28 @@ rqt-bag==1.5.4
 rqt-bag-plugins==1.5.4
 rqt-console==2.2.1
 #rqt-controller-manager==4.21.0
-rqt-dotgraph==0.0.4
-rqt-gauges==0.0.3
-rqt-graph==1.5.4
-rqt-gui==1.6.0
-rqt-gui-py==1.6.0
-rqt-joint-trajectory-controller==4.18.0
-rqt-moveit==1.0.1
-rqt-msg==1.5.1
-rqt-plot==1.4.0
-rqt-publisher==1.7.2
-rqt-py-common==1.6.0
-rqt-py-console==1.2.2
-rqt-reconfigure==1.6.2
-rqt-robot-dashboard==0.5.8
-rqt-robot-monitor==1.0.6
-rqt-robot-steering==1.0.0
-rqt-runtime-monitor==1.0.0
-rqt-service-caller==1.2.1
-rqt-shell==1.2.2
-rqt-srv==1.2.2
-rqt-tf-tree==1.0.5
-rqt-topic==1.7.3
+#rqt-dotgraph==0.0.4
+#rqt-gauges==0.0.3
+#rqt-graph==1.5.4
+#rqt-gui==1.6.0
+#rqt-gui-py==1.6.0
+#rqt-joint-trajectory-controller==4.18.0
+#rqt-moveit==1.0.1
+#rqt-msg==1.5.1
+#rqt-plot==1.4.0
+#rqt-publisher==1.7.2
+#rqt-py-common==1.6.0
+#rqt-py-console==1.2.2
+#rqt-reconfigure==1.6.2
+#rqt-robot-dashboard==0.5.8
+#rqt-robot-monitor==1.0.6
+#rqt-robot-steering==1.0.0
+#rqt-runtime-monitor==1.0.0
+#rqt-service-caller==1.2.1
+#rqt-shell==1.2.2
+#rqt-srv==1.2.2
+#rqt-tf-tree==1.0.5
+#rqt-topic==1.7.3
 sdk==0.0.0
 sensor-msgs==5.3.5
 sensor-msgs-py==5.3.5
