--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ ament-xmllint==0.17.1
 angles==1.16.0
 bond==4.1.0
 builtin-interfaces==2.0.2
-calibration==0.0.0
+#calibration==0.0.0
 casadi==3.6.7
 composition-interfaces==2.0.2
 contourpy==1.3.1
