--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ casadi==3.6.7
 composition-interfaces==2.0.2
 contourpy==1.3.1
 #control-msgs==5.3.0
-controller==0.0.0
+#controller==0.0.0
 #controller-manager==4.21.0
 #controller-manager-msgs==4.21.0
 cv-bridge==4.1.0
