--- a/requirements.txt
+++ b/requirements.txt
@@ -59,7 +59,7 @@ lifecycle-msgs==2.0.2
 logging-demo==0.33.5
 map-msgs==2.4.1
 matplotlib==3.10.0
-mentorpi-description==0.0.0
+#mentorpi-description==0.0.0
 message-filters==4.11.3
 nav-2d-msgs==1.3.4
 nav-msgs==5.3.5
