--- a/requirements.txt
+++ b/requirements.txt
@@ -71,7 +71,7 @@ osrf-pycommon==2.1.5
 packaging==24.2
 pcl-msgs==1.0.0
 pendulum-msgs==0.33.5
-peripherals==0.0.0
+#peripherals==0.0.0
 pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
