--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-#action-msgs==2.0.2
+action-msgs==2.0.2
 action-tutorials-interfaces==0.33.5
 action-tutorials-py==0.33.5
 actionlib-msgs==5.3.5
@@ -59,7 +59,7 @@ lifecycle-msgs==2.0.2
 logging-demo==0.33.5
 map-msgs==2.4.1
 matplotlib==3.10.0
-#mentorpi-description==0.0.0
+mentorpi-description==0.0.0
 message-filters==4.11.3
 nav-2d-msgs==1.3.4
 nav-msgs==5.3.5
@@ -71,7 +71,7 @@ osrf-pycommon==2.1.5
 packaging==24.2
 pcl-msgs==1.0.0
 pendulum-msgs==0.33.5
-#peripherals==0.0.0
+peripherals==0.0.0
 pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
@@ -88,8 +88,8 @@ resource-retriever==3.4.3
 rmw-dds-common==3.1.0
 #robot-localization==3.8.1
 #ros-image-to-qimage==0.4.1
-#ros-robot-controller==0.0.0
-#ros-robot-controller-msgs==0.0.0
+ros-robot-controller==0.0.0
+ros-robot-controller-msgs==0.0.0
 ros2action==0.32.2
 ros2bag==0.26.6
 ros2bag-mcap-cli==0.26.6
@@ -155,7 +155,7 @@ rqt-console==2.2.1
 #rqt-srv==1.2.2
 #rqt-tf-tree==1.0.5
 #rqt-topic==1.7.3
-#sdk==0.0.0
+sdk==0.0.0
 sensor-msgs==5.3.5
 sensor-msgs-py==5.3.5
 service-msgs==2.0.2
