--- a/requirements.txt
+++ b/requirements.txt
@@ -17,14 +17,14 @@ ament-xmllint==0.17.1
 angles==1.16.0
 bond==4.1.0
 builtin-interfaces==2.0.2
-#calibration==0.0.0
+calibration==0.0.0
 casadi==3.6.7
 composition-interfaces==2.0.2
 contourpy==1.3.1
-#control-msgs==5.3.0
-#controller==0.0.0
-#controller-manager==4.21.0
-#controller-manager-msgs==4.21.0
+control-msgs==5.3.0
+controller==0.0.0
+controller-manager==4.21.0
+controller-manager-msgs==4.21.0
 cv-bridge==4.1.0
 cycler==0.12.1
 demo-nodes-py==0.33.5
@@ -40,12 +40,13 @@ examples-rclpy-minimal-client==0.19.4
 examples-rclpy-minimal-publisher==0.19.4
 examples-rclpy-minimal-service==0.19.4
 examples-rclpy-minimal-subscriber==0.19.4
-#fonttools==4.56.0
-#generate-parameter-library-py==0.3.8
+fonttools==4.56.0
+generate-parameter-library-py==0.3.8
 geographic-msgs==1.0.6
 geometry-msgs==5.3.5
 image-geometry==4.1.0
 interactive-markers==2.5.4
+joblib==1.4.2
 joint-state-publisher==2.4.0
 kiwisolver==1.4.8
 laser-geometry==2.7.0
@@ -67,8 +68,10 @@ nav2-common==1.3.4
 nav2-msgs==1.3.4
 nav2-simple-commander==1.0.0
 numpy==2.2.3
+opencv-python==4.11.0.86
 osrf-pycommon==2.1.5
 packaging==24.2
+pandas==2.2.3
 pcl-msgs==1.0.0
 pendulum-msgs==0.33.5
 peripherals==0.0.0
@@ -76,6 +79,7 @@ pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-qt-binding==2.2.1
+pytz==2025.2
 qt-dotgraph==2.7.5
 qt-gui==2.7.5
 qt-gui-cpp==2.7.5
@@ -86,8 +90,8 @@ rclpy==7.1.3
 rcutils==6.7.2
 resource-retriever==3.4.3
 rmw-dds-common==3.1.0
-#robot-localization==3.8.1
-#ros-image-to-qimage==0.4.1
+robot-localization==3.8.1
+ros-image-to-qimage==0.4.1
 ros-robot-controller==0.0.0
 ros-robot-controller-msgs==0.0.0
 ros2action==0.32.2
@@ -127,34 +131,36 @@ rosidl-typesupport-fastrtps-cpp==3.6.1
 rosidl-typesupport-introspection-c==4.6.5
 rosidl-typesupport-introspection-cpp==4.6.5
 rpyutils==0.4.1
-#rqt==1.6.0
+rqt==1.6.0
 rqt-action==2.2.0
 rqt-bag==1.5.4
 rqt-bag-plugins==1.5.4
 rqt-console==2.2.1
-#rqt-controller-manager==4.21.0
-#rqt-dotgraph==0.0.4
-#rqt-gauges==0.0.3
-#rqt-graph==1.5.4
-#rqt-gui==1.6.0
-#rqt-gui-py==1.6.0
-#rqt-joint-trajectory-controller==4.18.0
-#rqt-moveit==1.0.1
-#rqt-msg==1.5.1
-#rqt-plot==1.4.0
-#rqt-publisher==1.7.2
-#rqt-py-common==1.6.0
-#rqt-py-console==1.2.2
-#rqt-reconfigure==1.6.2
-#rqt-robot-dashboard==0.5.8
-#rqt-robot-monitor==1.0.6
-#rqt-robot-steering==1.0.0
-#rqt-runtime-monitor==1.0.0
-#rqt-service-caller==1.2.1
-#rqt-shell==1.2.2
-#rqt-srv==1.2.2
-#rqt-tf-tree==1.0.5
-#rqt-topic==1.7.3
+rqt-controller-manager==4.21.0
+rqt-dotgraph==0.0.4
+rqt-gauges==0.0.3
+rqt-graph==1.5.4
+rqt-gui==1.6.0
+rqt-gui-py==1.6.0
+rqt-joint-trajectory-controller==4.18.0
+rqt-moveit==1.0.1
+rqt-msg==1.5.1
+rqt-plot==1.4.0
+rqt-publisher==1.7.2
+rqt-py-common==1.6.0
+rqt-py-console==1.2.2
+rqt-reconfigure==1.6.2
+rqt-robot-dashboard==0.5.8
+rqt-robot-monitor==1.0.6
+rqt-robot-steering==1.0.0
+rqt-runtime-monitor==1.0.0
+rqt-service-caller==1.2.1
+rqt-shell==1.2.2
+rqt-srv==1.2.2
+rqt-tf-tree==1.0.5
+rqt-topic==1.7.3
+scikit-learn==1.6.1
+scipy==1.15.2
 sdk==0.0.0
 sensor-msgs==5.3.5
 sensor-msgs-py==5.3.5
@@ -177,10 +183,12 @@ tf2-ros-py==0.36.7
 tf2-sensor-msgs==0.36.7
 tf2-tools==0.36.7
 theora-image-transport==4.0.3
+threadpoolctl==3.6.0
 topic-monitor==0.33.5
 trajectory-msgs==5.3.5
 turtlesim==1.8.3
 type-description-interfaces==2.0.2
+tzdata==2025.2
 unique-identifier-msgs==2.5.0
 visualization-msgs==5.3.5
 xacro==2.0.11
